--- a/src/components/TagsList.scss
+++ b/src/components/TagsList.scss
@@ -1,6 +1,5 @@
+
 .tag{
-  padding: 5px 5px 5px;
   border-radius:5px;  
-  margin:5px;
   display: inline-block;
 }
